deployment/iptables.save
# Generated by iptables-save v1.4.21 on Mon Mar 28 12:55:06 2016
*nat
:PREROUTING ACCEPT [8:496]
:INPUT ACCEPT [8:496]
:OUTPUT ACCEPT [47:3213]
:POSTROUTING ACCEPT [47:3213]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.17.0.1/32 -d 172.17.0.1/32 -p tcp -m tcp --dport 5000 -j MASQUERADE
-A POSTROUTING -s 172.17.0.252/32 -d 172.17.0.252/32 -p tcp -m tcp --dport 80 -j SNAT --to-source 173.26.100.228
-A POSTROUTING -s 172.17.0.201/32 -d 172.17.0.201/32 -p udp -m udp --dport 53 -j SNAT --to-source 173.26.100.252
-A POSTROUTING -s 172.17.0.114/32 -d 172.17.0.114/32 -p udp -m udp --dport 53 -j SNAT --to-source 173.26.100.114
-A POSTROUTING -s 172.17.0.114/32 -d 172.17.0.114/32 -p tcp -m tcp --dport 5666 -j SNAT --to-source 173.26.100.114
-A POSTROUTING -s 172.17.0.244/32 -d 172.17.0.244/32 -p tcp -m tcp --dport 80 -j SNAT --to-source 173.26.100.244
-A POSTROUTING -s 172.17.0.221/32 -d 172.17.0.221/32 -p udp -m udp --dport 53 -j SNAT --to-source 173.26.100.229
-A POSTROUTING -s 172.17.0.229/32 -d 172.17.0.229/32 -p tcp -m tcp --dport 80 -j SNAT --to-source 173.26.100.229
-A POSTROUTING -s 172.17.0.229/32 -d 172.17.0.229/32 -p udp -m udp --dport 873 -j SNAT --to-source 173.26.100.229
-A POSTROUTING -s 172.17.0.229/32 -d 172.17.0.229/32 -p tcp -m tcp --dport 873 -j SNAT --to-source 173.26.100.229
-A POSTROUTING -s 172.17.0.238/32 -d 172.17.0.238/32 -p tcp -m tcp --dport 5666 -j SNAT --to-source 173.26.100.238
-A POSTROUTING -s 172.17.0.111/32 -d 172.17.0.111/32 -p tcp -m tcp --dport 80 -j SNAT --to-source 173.26.100.230
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 5000 -j DNAT --to-destination 172.17.0.1:5000
-A DOCKER -d 173.26.100.228/32 ! -i docker0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.17.0.252:80
-A DOCKER -d 173.26.100.252/32 ! -i docker0 -p udp -m udp --dport 53 -j DNAT --to-destination 172.17.0.201:53
-A DOCKER -d 173.26.100.114/32 ! -i docker0 -p udp -m udp --dport 53 -j DNAT --to-destination 172.17.0.114:53
-A DOCKER -d 173.26.100.114/32 ! -i docker0 -p tcp -m tcp --dport 5666 -j DNAT --to-destination 172.17.0.114:5666
-A DOCKER -d 173.26.100.244/32 ! -i docker0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.17.0.244:80
-A DOCKER -d 173.26.100.229/32 ! -i docker0 -p udp -m udp --dport 53 -j DNAT --to-destination 172.17.0.221:53
-A DOCKER -d 173.26.100.229/32 ! -i docker0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.17.0.229:80
-A DOCKER -d 173.26.100.229/32 ! -i docker0 -p udp -m udp --dport 873 -j DNAT --to-destination 172.17.0.229:873
-A DOCKER -d 173.26.100.229/32 ! -i docker0 -p tcp -m tcp --dport 873 -j DNAT --to-destination 172.17.0.229:873
-A DOCKER -d 173.26.100.238/32 ! -i docker0 -p tcp -m tcp --dport 5666 -j DNAT --to-destination 172.17.0.238:5666
-A DOCKER -d 173.26.100.230/32 ! -i docker0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.17.0.111:80
#root-server
-A POSTROUTING -s 172.18.0.6/32 -d 172.18.0.6/32 -p udp -m udp --dport 53 -j SNAT --to-source 173.26.102.105
-A DOCKER -d 173.26.102.105 ! -i docker0 -p udp -m udp --dport 53 -j DNAT --to-destination 172.18.0.6:53
-A POSTROUTING -s 172.18.0.6/32 -d 172.18.0.6/32 -p tcp -m tcp --dport 53 -j SNAT --to-source 173.26.102.105
-A DOCKER -d 173.26.102.105 ! -i docker0 -p tcp -m tcp --dport 53 -j DNAT --to-destination 172.18.0.6:53
COMMIT
# Completed on Mon Mar 28 12:55:06 2016
# Generated by iptables-save v1.4.21 on Mon Mar 28 12:55:06 2016
*filter
:INPUT ACCEPT [53:3956]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2763:1135775]
:DOCKER - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth+ -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 53 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 12865 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 12865 -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -p icmp -j ACCEPT
-A FORWARD -i lo -j ACCEPT
-A FORWARD -i eth+ -j ACCEPT
-A DOCKER -d 172.17.0.5/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 5666 -j ACCEPT
-A DOCKER -d 172.17.0.1/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 5000 -j ACCEPT
-A DOCKER -d 172.17.0.6/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 80 -j ACCEPT
COMMIT
# Completed on Mon Mar 28 12:55:06 2016
